@@ -168,12 +168,97 @@ sub Install {
                                           $ret->{libdir}, "f90");
     Debug("Have F90 bindings: $ret->{f90_bindings}\n"); 
 
-    # All done
+    # Write out the OMPI cleanup script and be done.
 
-    $ret->{success} = 1;
-    $ret->{result_message} = "Success";
-    Debug("Build was a success\n");
+    if (0 != write_cleanup_script("$ret->{installdir}/bin")) {
+        $ret->{success} = 0;
+        $ret->{message} = "Failed to create cleanup script!";
+    } else {
+        $ret->{success} = 1;
+        $ret->{result_message} = "Success";
+        Debug("Build was a success\n");
+    }
+
     return $ret;
 } 
+
+# Write out a script that's capable of cleaning up OMPI jobs
+sub write_cleanup_script {
+    my $bindir = shift;
+    my $file = "$bindir/mtt_ompi_cleanup.pl";
+    unlink($file);
+
+    # Create the script and be paranoid about the permissions.
+
+    my $u = umask;
+    umask(0777);
+    if (!open(FILE, ">$file")) {
+        umask($u);
+        return 1;
+    }
+    chmod(0755, $file);
+    print FILE '#!/usr/bin/env perl
+
+# This script is automatically generated by MTT/MPI/Install/OMPI.pm.  
+# Manual edits will be lost.
+
+# Helper cleanup script to kill all orteds on a node (except the one
+# that spawed this script, so that the mpirun that started this script
+# can complete normally), and remove all session directories.
+
+use strict;
+
+# See which variant of ps we have
+
+my $ps_args;
+my $pid_token;
+my $cmd_start_token;
+my $ret = system("ps auxw > /dev/null 2> /dev/null");
+$ret = $ret >> 8;
+if (0 == $ret) {
+    $ps_args = "auxww";
+    $pid_token = 1;
+    $cmd_start_token = 10;
+} else {
+    $ps_args = "-eadf";
+    $pid_token = 1;
+    $cmd_start_token = 7;
+}
+
+# Run ps and find all orteds.  Kill any that are not my parent.
+
+my $orted_pid = getppid();
+open(CMD, "ps $ps_args|") || die("Could not run ps");
+my @pids;
+while (<CMD>) {
+    my @tokens = split(/\s+/);
+    # Only look at the first token in the command to see if it is the
+    # orted; we do not want to grab incidental processes that contian
+    # "orted" (e.g., "emacs orted.c", "ssh <othernode> orted ...",
+    # etc.).
+    if ($tokens[$cmd_start_token] =~ /orted/) {
+        if ($tokens[$pid_token] != $orted_pid) {
+            # Do not bother to check the return from kill() because, at
+            # least at the moment, there is could be multiple instances
+            # of this script running on a single node :-(
+            kill(9, $tokens[$pid_token]);
+        }
+    }
+}
+close(CMD);
+
+# Whack any sessions directories
+
+my $who = getpwuid($<);
+system("rm -rf /tmp/openmpi-sessions-$who*");
+
+# All done
+
+exit(0);
+';
+    close(FILE);
+    umask($u);
+    return 0;
+}
 
 1;
