@@ -172,38 +172,21 @@ exec = mpirun @hosts@ -np &test_np() --prefix &test_prefix() &test_executable() 
 hosts = &if(&have_hostfile(), "&join("--hostfile ", "&hostfile()")", \
             "&if(&have_hostlist(), "&join("--host ", "&hostlist()")", "")")
 
+# A helper script is installed by the "OMPI" MPI Install module named
+# "mtt_ompi_cleanup.pl".  This script is orterun-able and will kill
+# all rogue orteds on a node and whack any session directories.
+# Invoke via orterun just to emphasize that it is not an MPI
+# application.  The helper script is installed in OMPI's bin dir, so
+# it'll automatically be found in the path (because OMPI's bin dir is
+# in the path).
+
 after_each_exec = <<EOT
-
-# This scriptlet ensures that all remnants of the prior mpirun are
-# gone.  It kills all orteds running under this user and whacks any
-# session directories that it finds.  Hence, do not expect to be able
-# to run on the same machine/user as a user who is running MTT tests.
-
-# This scriptlet is not fully tested yet.  Needs testing on: Linux,
-# OSX, Solaris.
-
-who=`whoami`
-which killall > /dev/null 2> /dev/null
-if test "$?" = "0"; then
-    # If we have killall, it's easy.
-    killall -9 orted
-else
-    # We're on an OS without killall.  Which variant of ps do we have?
-    ps auxw > /dev/null 2> /dev/null
-    if test "$?" = "0"; then
-        ps_args="auxww"
-    else
-        ps_args="-eadf"
-    fi
-    pids=`ps $ps_args | grep $who | grep -v grep | grep orted awk '{ print $2 }'`
-    if test "$pids" != ""; then
-        kill -9 $pids
-    fi
+if test "$MTT_TEST_HOSTFILE" != ""; then
+    args="--hostfile $MTT_TEST_HOSTFILE"
+elif test "$MTT_TEST_HOSTLIST" != ""; then
+    args="--host $MTT_TEST_HOSTLIST"
 fi
-
-# Whack any remaining session directories.  This is a workaround for
-# current bugs in OMPI.
-rm -rf /tmp/openmpi-sessions-${who}*
+orterun $args -np $MTT_TEST_NP --prefix $MTT_TEST_PREFIX mtt_ompi_cleanup.pl
 EOT
 
 #======================================================================
